mtgorp/tools/parsing/search/gen/search_grammarParser.py
# Generated from /home/biggenerals/PycharmProjects/mtgorp/mtgorp/tools/parsing/search/search_grammar.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class search_grammarParser ( Parser ):

    grammarFileName = "search_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'!'", "'('", "')'", "'&'", "'||'", "'='", 
                     "';'", "'<'", "'<='", "'>'", "'>='", "'@'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "DYNAMIC_VALUE", "NAME_CODE", "TYPE_CODE", "MANA_CODE", 
                      "ORACLE_CODE", "POWER_CODE", "TOUGHNESS_CODE", "LOYALTY_CODE", 
                      "ARTIST_CODE", "CMC_CODE", "RARITY_CODE", "LAYOUT_CODE", 
                      "FLAGS_CODE", "FLAVOR_CODE", "EXPANSION_CODE", "BLOCK_CODE", 
                      "CARDBOARD_CODE", "PRINTING_CODE", "UNSIGNED_INTEGER", 
                      "QUOTED_VALUE", "VALUE", "WHITESPACE" ]

    RULE_start = 0
    RULE_operation = 1
    RULE_restriction = 2
    RULE_value_chain = 3
    RULE_value = 4
    RULE_static_value = 5
    RULE_operator = 6
    RULE_dynamic_value = 7

    ruleNames =  [ "start", "operation", "restriction", "value_chain", "value", 
                   "static_value", "operator", "dynamic_value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    DYNAMIC_VALUE=12
    NAME_CODE=13
    TYPE_CODE=14
    MANA_CODE=15
    ORACLE_CODE=16
    POWER_CODE=17
    TOUGHNESS_CODE=18
    LOYALTY_CODE=19
    ARTIST_CODE=20
    CMC_CODE=21
    RARITY_CODE=22
    LAYOUT_CODE=23
    FLAGS_CODE=24
    FLAVOR_CODE=25
    EXPANSION_CODE=26
    BLOCK_CODE=27
    CARDBOARD_CODE=28
    PRINTING_CODE=29
    UNSIGNED_INTEGER=30
    QUOTED_VALUE=31
    VALUE=32
    WHITESPACE=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(search_grammarParser.OperationContext,0)


        def EOF(self):
            return self.getToken(search_grammarParser.EOF, 0)

        def getRuleIndex(self):
            return search_grammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = search_grammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.operation(0)
            self.state = 17
            self.match(search_grammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return search_grammarParser.RULE_operation

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self):
            return self.getTypedRuleContext(search_grammarParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesisContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self):
            return self.getTypedRuleContext(search_grammarParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesis" ):
                listener.enterParenthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesis" ):
                listener.exitParenthesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesis" ):
                return visitor.visitParenthesis(self)
            else:
                return visitor.visitChildren(self)


    class RestrictionOperationContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def restriction(self):
            return self.getTypedRuleContext(search_grammarParser.RestrictionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRestrictionOperation" ):
                listener.enterRestrictionOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRestrictionOperation" ):
                listener.exitRestrictionOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRestrictionOperation" ):
                return visitor.visitRestrictionOperation(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(search_grammarParser.OperationContext)
            else:
                return self.getTypedRuleContext(search_grammarParser.OperationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(search_grammarParser.OperationContext)
            else:
                return self.getTypedRuleContext(search_grammarParser.OperationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)



    def operation(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = search_grammarParser.OperationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_operation, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [search_grammarParser.T__0]:
                localctx = search_grammarParser.NotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 20
                self.match(search_grammarParser.T__0)
                self.state = 21
                self.operation(6)
                pass
            elif token in [search_grammarParser.T__1]:
                localctx = search_grammarParser.ParenthesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 22
                self.match(search_grammarParser.T__1)
                self.state = 23
                self.operation(0)
                self.state = 24
                self.match(search_grammarParser.T__2)
                pass
            elif token in [search_grammarParser.DYNAMIC_VALUE, search_grammarParser.NAME_CODE, search_grammarParser.TYPE_CODE, search_grammarParser.MANA_CODE, search_grammarParser.ORACLE_CODE, search_grammarParser.POWER_CODE, search_grammarParser.TOUGHNESS_CODE, search_grammarParser.LOYALTY_CODE, search_grammarParser.ARTIST_CODE, search_grammarParser.CMC_CODE, search_grammarParser.RARITY_CODE, search_grammarParser.LAYOUT_CODE, search_grammarParser.FLAGS_CODE, search_grammarParser.EXPANSION_CODE, search_grammarParser.BLOCK_CODE, search_grammarParser.UNSIGNED_INTEGER, search_grammarParser.QUOTED_VALUE, search_grammarParser.VALUE]:
                localctx = search_grammarParser.RestrictionOperationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 26
                self.restriction()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 39
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 37
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = search_grammarParser.AndContext(self, search_grammarParser.OperationContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operation)
                        self.state = 29
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 30
                        self.operation(4)
                        pass

                    elif la_ == 2:
                        localctx = search_grammarParser.AndContext(self, search_grammarParser.OperationContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operation)
                        self.state = 31
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 32
                        self.match(search_grammarParser.T__3)
                        self.state = 33
                        self.operation(3)
                        pass

                    elif la_ == 3:
                        localctx = search_grammarParser.OrContext(self, search_grammarParser.OperationContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operation)
                        self.state = 34
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 35
                        self.match(search_grammarParser.T__4)
                        self.state = 36
                        self.operation(2)
                        pass

             
                self.state = 41
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class RestrictionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return search_grammarParser.RULE_restriction

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NameRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self):
            return self.getTypedRuleContext(search_grammarParser.ValueContext,0)

        def NAME_CODE(self):
            return self.getToken(search_grammarParser.NAME_CODE, 0)
        def operator(self):
            return self.getTypedRuleContext(search_grammarParser.OperatorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameRestriction" ):
                listener.enterNameRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameRestriction" ):
                listener.exitNameRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNameRestriction" ):
                return visitor.visitNameRestriction(self)
            else:
                return visitor.visitChildren(self)


    class BlockRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BLOCK_CODE(self):
            return self.getToken(search_grammarParser.BLOCK_CODE, 0)
        def value(self):
            return self.getTypedRuleContext(search_grammarParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockRestriction" ):
                listener.enterBlockRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockRestriction" ):
                listener.exitBlockRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockRestriction" ):
                return visitor.visitBlockRestriction(self)
            else:
                return visitor.visitChildren(self)


    class ManaRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MANA_CODE(self):
            return self.getToken(search_grammarParser.MANA_CODE, 0)
        def operator(self):
            return self.getTypedRuleContext(search_grammarParser.OperatorContext,0)

        def static_value(self):
            return self.getTypedRuleContext(search_grammarParser.Static_valueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterManaRestriction" ):
                listener.enterManaRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitManaRestriction" ):
                listener.exitManaRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManaRestriction" ):
                return visitor.visitManaRestriction(self)
            else:
                return visitor.visitChildren(self)


    class ExpansionRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EXPANSION_CODE(self):
            return self.getToken(search_grammarParser.EXPANSION_CODE, 0)
        def value(self):
            return self.getTypedRuleContext(search_grammarParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpansionRestriction" ):
                listener.enterExpansionRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpansionRestriction" ):
                listener.exitExpansionRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpansionRestriction" ):
                return visitor.visitExpansionRestriction(self)
            else:
                return visitor.visitChildren(self)


    class ToughnessRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TOUGHNESS_CODE(self):
            return self.getToken(search_grammarParser.TOUGHNESS_CODE, 0)
        def operator(self):
            return self.getTypedRuleContext(search_grammarParser.OperatorContext,0)

        def value(self):
            return self.getTypedRuleContext(search_grammarParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToughnessRestriction" ):
                listener.enterToughnessRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToughnessRestriction" ):
                listener.exitToughnessRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToughnessRestriction" ):
                return visitor.visitToughnessRestriction(self)
            else:
                return visitor.visitChildren(self)


    class TypeRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPE_CODE(self):
            return self.getToken(search_grammarParser.TYPE_CODE, 0)
        def operator(self):
            return self.getTypedRuleContext(search_grammarParser.OperatorContext,0)

        def value_chain(self):
            return self.getTypedRuleContext(search_grammarParser.Value_chainContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeRestriction" ):
                listener.enterTypeRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeRestriction" ):
                listener.exitTypeRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeRestriction" ):
                return visitor.visitTypeRestriction(self)
            else:
                return visitor.visitChildren(self)


    class OracleRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ORACLE_CODE(self):
            return self.getToken(search_grammarParser.ORACLE_CODE, 0)
        def operator(self):
            return self.getTypedRuleContext(search_grammarParser.OperatorContext,0)

        def value(self):
            return self.getTypedRuleContext(search_grammarParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOracleRestriction" ):
                listener.enterOracleRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOracleRestriction" ):
                listener.exitOracleRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOracleRestriction" ):
                return visitor.visitOracleRestriction(self)
            else:
                return visitor.visitChildren(self)


    class RarityRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RARITY_CODE(self):
            return self.getToken(search_grammarParser.RARITY_CODE, 0)
        def value(self):
            return self.getTypedRuleContext(search_grammarParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRarityRestriction" ):
                listener.enterRarityRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRarityRestriction" ):
                listener.exitRarityRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRarityRestriction" ):
                return visitor.visitRarityRestriction(self)
            else:
                return visitor.visitChildren(self)


    class LayoutRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LAYOUT_CODE(self):
            return self.getToken(search_grammarParser.LAYOUT_CODE, 0)
        def value(self):
            return self.getTypedRuleContext(search_grammarParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayoutRestriction" ):
                listener.enterLayoutRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayoutRestriction" ):
                listener.exitLayoutRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayoutRestriction" ):
                return visitor.visitLayoutRestriction(self)
            else:
                return visitor.visitChildren(self)


    class CmcRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CMC_CODE(self):
            return self.getToken(search_grammarParser.CMC_CODE, 0)
        def operator(self):
            return self.getTypedRuleContext(search_grammarParser.OperatorContext,0)

        def UNSIGNED_INTEGER(self):
            return self.getToken(search_grammarParser.UNSIGNED_INTEGER, 0)
        def dynamic_value(self):
            return self.getTypedRuleContext(search_grammarParser.Dynamic_valueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmcRestriction" ):
                listener.enterCmcRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmcRestriction" ):
                listener.exitCmcRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmcRestriction" ):
                return visitor.visitCmcRestriction(self)
            else:
                return visitor.visitChildren(self)


    class LoyaltyRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOYALTY_CODE(self):
            return self.getToken(search_grammarParser.LOYALTY_CODE, 0)
        def operator(self):
            return self.getTypedRuleContext(search_grammarParser.OperatorContext,0)

        def value(self):
            return self.getTypedRuleContext(search_grammarParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoyaltyRestriction" ):
                listener.enterLoyaltyRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoyaltyRestriction" ):
                listener.exitLoyaltyRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoyaltyRestriction" ):
                return visitor.visitLoyaltyRestriction(self)
            else:
                return visitor.visitChildren(self)


    class ArtistRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ARTIST_CODE(self):
            return self.getToken(search_grammarParser.ARTIST_CODE, 0)
        def operator(self):
            return self.getTypedRuleContext(search_grammarParser.OperatorContext,0)

        def value(self):
            return self.getTypedRuleContext(search_grammarParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArtistRestriction" ):
                listener.enterArtistRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArtistRestriction" ):
                listener.exitArtistRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArtistRestriction" ):
                return visitor.visitArtistRestriction(self)
            else:
                return visitor.visitChildren(self)


    class FlagsRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLAGS_CODE(self):
            return self.getToken(search_grammarParser.FLAGS_CODE, 0)
        def operator(self):
            return self.getTypedRuleContext(search_grammarParser.OperatorContext,0)

        def value_chain(self):
            return self.getTypedRuleContext(search_grammarParser.Value_chainContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlagsRestriction" ):
                listener.enterFlagsRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlagsRestriction" ):
                listener.exitFlagsRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlagsRestriction" ):
                return visitor.visitFlagsRestriction(self)
            else:
                return visitor.visitChildren(self)


    class PowerRestrictionContext(RestrictionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a search_grammarParser.RestrictionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def POWER_CODE(self):
            return self.getToken(search_grammarParser.POWER_CODE, 0)
        def operator(self):
            return self.getTypedRuleContext(search_grammarParser.OperatorContext,0)

        def value(self):
            return self.getTypedRuleContext(search_grammarParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowerRestriction" ):
                listener.enterPowerRestriction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowerRestriction" ):
                listener.exitPowerRestriction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowerRestriction" ):
                return visitor.visitPowerRestriction(self)
            else:
                return visitor.visitChildren(self)



    def restriction(self):

        localctx = search_grammarParser.RestrictionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_restriction)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = search_grammarParser.NameRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.value()
                pass

            elif la_ == 2:
                localctx = search_grammarParser.NameRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.match(search_grammarParser.NAME_CODE)
                self.state = 44
                self.operator()
                self.state = 45
                self.value()
                pass

            elif la_ == 3:
                localctx = search_grammarParser.TypeRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.match(search_grammarParser.TYPE_CODE)
                self.state = 48
                self.operator()
                self.state = 49
                self.value_chain(0)
                pass

            elif la_ == 4:
                localctx = search_grammarParser.ManaRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.match(search_grammarParser.MANA_CODE)
                self.state = 52
                self.operator()
                self.state = 53
                self.static_value()
                pass

            elif la_ == 5:
                localctx = search_grammarParser.OracleRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.match(search_grammarParser.ORACLE_CODE)
                self.state = 56
                self.operator()
                self.state = 57
                self.value()
                pass

            elif la_ == 6:
                localctx = search_grammarParser.PowerRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 59
                self.match(search_grammarParser.POWER_CODE)
                self.state = 60
                self.operator()
                self.state = 61
                self.value()
                pass

            elif la_ == 7:
                localctx = search_grammarParser.ToughnessRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 63
                self.match(search_grammarParser.TOUGHNESS_CODE)
                self.state = 64
                self.operator()
                self.state = 65
                self.value()
                pass

            elif la_ == 8:
                localctx = search_grammarParser.LoyaltyRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 67
                self.match(search_grammarParser.LOYALTY_CODE)
                self.state = 68
                self.operator()
                self.state = 69
                self.value()
                pass

            elif la_ == 9:
                localctx = search_grammarParser.ArtistRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 71
                self.match(search_grammarParser.ARTIST_CODE)
                self.state = 72
                self.operator()
                self.state = 73
                self.value()
                pass

            elif la_ == 10:
                localctx = search_grammarParser.CmcRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 75
                self.match(search_grammarParser.CMC_CODE)
                self.state = 76
                self.operator()
                self.state = 77
                self.match(search_grammarParser.UNSIGNED_INTEGER)
                pass

            elif la_ == 11:
                localctx = search_grammarParser.CmcRestrictionContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 79
                self.match(search_grammarParser.CMC_CODE)
                self.state = 80
                self.operator()
                self.state = 81
                self.dynamic_value()
                pass
